# oauth2

./: .env  Cargo.toml
migrations/2019-01-28-025924_create_people/: down.sql  up.sql
migrations/2019-01-28-025924_create_users/: down.sql  up.sql
migrations/2019-04-07-231348_create_clients/: down.sql  up.sql
src/: data.rs  errors.rs  main.rs  oauth2.rs  schema.rs
src/auth/: mod.rs
src/clients/: mod.rs
src/oauth/: errors.rs  mod.rs  routes.rs
src/people/: errors.rs  mod.rs  repository.rs  routes.rs
